# masterthesis

./: README.md
Masterthesis/: .gitignore  CMakeLists.txt  vcpkg.json
Masterthesis/Kernels/: KernelRunner.cpp  gemm.cl
Masterthesis/Microbenchmarks/: FastestDotProduct.cpp  KernelParameters.cpp
Masterthesis/OtherWork/: djinevski_2013.cl  djinevski_2013.cpp  gemm_in_muesli.cpp  torres_2011.cl  torres_2011.cpp  volkov_2008.cl  volkov_2008.cpp
Masterthesis/OtherWork/Matsumoto2012/: BasicTemplate.hpp  DoubleBufferingTemplate.hpp  KernelTemplate.hpp  PipeliningTemplate.hpp  matsumoto_2012.cpp  utl_matrix2.hpp
Masterthesis/OtherWork/Muesli/: Array.h  Atomic.h  BBFrame.h  BBFrameWorkpool.h  BBProblemTracker.h  BBSolver.h  BlockDistribution.cpp  BlockDistribution.h  BranchAndBound.h  BsrIndex.cpp  BsrIndex.h  BsrSubmatrix.h  Collection.h  ColumnDistribution.cpp  ColumnDistribution.h  Conversion.h  CrsSubmatrix.h  Curry.h  DCSolver.h  DCStreamSolver.h  DistributedArray.h  DistributedDC.h  DistributedDataStructure.cpp  DistributedDataStructure.h  DistributedMatrix.h  DistributedSparseMatrix.h  Distribution.cpp  Distribution.h  Double.cpp  Double.h  Element.h  Exception.h  Farm.h  Filter.h  Final.h  Frame.h  Initial.h  License  Makefile  MatrixElement.h  (+52 more)
Masterthesis/template/: .gitignore  Thesis.tex  clean.sh
Masterthesis/template/attachments/: makeindex.tex
Masterthesis/template/bibliography/: Literatur.bib
Masterthesis/template/chapter/: Abstrakt.tex  Einleitung.tex  Hardware.tex  Implementation.tex  Matlab.tex  PreviousWork.tex  Zusammenfassung.tex
Masterthesis/template/extra/: Aufgabenstellung.tex  Danksagung.tex  Erklaerung.tex  Symbole.tex  Titel.tex
Masterthesis/template/figures/: flopocoClassHierarchy.xmi  kernelLaunchOverhead.eps
Masterthesis/template/figures/dot/: CatDemo_notOptimized.dot  dot.sh  sel1.dot  sel2.dot  sel3.dot  sel4.dot
Masterthesis/template/sources/: djinevski_2013.cl  gemm_in_muesli.cpp  volkov_2008.cl
OpenCL-Wrapper/: CMakeLists.txt  vcpkg.json
OpenCL-Wrapper/Code/inc/: utl_matrix.h  utl_profile_pass.h
OpenCL-Wrapper/Code/src/: utl_dim.cpp  utl_type.cpp
OpenCL-Wrapper/Tutorial/9.minimum/: minimum.cpp
